@@ -1,5 +1,6 @@
 libmpdclient 2.14 (not yet released)
 * MSVC compatibility
+* improved local and abstract socket support
 
 libmpdclient 2.13 (2017/07/25)
 * fix build with meson > 0.38.1
